--- a/bio.html
+++ b/bio.html
@@ -7,22 +7,21 @@
 </head>
 
 <body>
+
 <div id="container">
   <div id="bio_background">
     <div id="bio_text">
-      <p>I am an Edinburgh, Scotland 
-        based post-digital musician. I am also a sound engineer, a comic writer/ artist, a photographer, and a student of Neuroscience.</p>
-      <p>This is a place for my projects to be collected.</p>
+      <p>I am an Edinburgh, Scotland based experimental musician. My music is slowly incorporating my primary area of study, Neuroscience- largely through use of neural models and information as conceptually interesting instruments. I have worked as a sound designer, sound engineer, and a graphic novelist. I am also a keen photographer.</p>
       <p align="justify">Preview pieces of my work and free versions of some of my programming are here for download. Other things are available for purchase. I'm always interested to hear people's opinions of what I do- whether it's negative, positive, or somewhere in between- so feel free to get in touch and let me know what you think. </p>
-      <p>I hope you can find inspiration or at least something of interest here.<br />
         <br />
         Dylan Ross <br />
         dylanross@experimental-electronic.com</p>
     </div>
-    <div id="home_button"><a href="index.html"><img src="Exported Slices/images/home_button.jpg" width="67" height="25" alt="home" /></a></div>
-    <div id="bio_button"><img src="Exported Slices/images/bio_button.jpg" width="36" height="25" alt="bio" /></div>
+    <div id="home_button"><a href="http://www.experimental-electronic.com/home"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" width="67" height="25" alt="home" /></a></div>
+    <div id="bio_button"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/bio_button.jpg" width="36" height="25" alt="bio" /></div>
     <div id="bio_text_photo_credit">photography on this page by brittonie fletcher</div>
   </div>
 </div>
+
 </body>
 </html>
