--- a/bio.html
+++ b/bio.html
@@ -17,7 +17,7 @@
         Dylan Ross <br />
         dylanross@experimental-electronic.com</p>
     </div>
-    <div id="home_button"><a href="http://www.experimental-electronic.com/home"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" width="67" height="25" alt="home" /></a></div>
+    <div id="home_button"><a href="index.html"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" width="67" height="25" alt="home" /></a></div>
     <div id="bio_button"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/bio_button.jpg" width="36" height="25" alt="bio" /></div>
     <div id="bio_text_photo_credit">photography on this page by brittonie fletcher</div>
   </div>
