--- a/bio.html
+++ b/bio.html
@@ -14,8 +14,7 @@
       <p>I am an Edinburgh, Scotland based experimental musician. My music is slowly incorporating my primary area of study, Neuroscience- largely through use of neural models and information as conceptually interesting instruments. I have worked as a sound designer, sound engineer, and a graphic novelist. I am also a keen photographer.</p>
       <p align="justify">Preview pieces of my work and free versions of some of my programming are here for download. Other things are available for purchase. I'm always interested to hear people's opinions of what I do- whether it's negative, positive, or somewhere in between- so feel free to get in touch and let me know what you think. </p>
         <br />
-        Dylan Ross <br />
-        dylanross@experimental-electronic.com</p>
+        Dylan Ross <br /></p>
     </div>
     <div id="home_button"><a href="index.html"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/home_button.jpg" width="67" height="25" alt="home" /></a></div>
     <div id="bio_button"><img src="http://experimentalelectronictest.files.wordpress.com/2011/08/bio_button.jpg" width="36" height="25" alt="bio" /></div>
